# sunbeam

./: .dockerignore  .env-template  .gitignore  CHANGELOG  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: contain_me.yml  release_me.yml
config/: fields.yml  main.yml
config/makers/postgres/: 1_init.sql  2_updated_at.sql  3_finance.sql
config/schemas/: donations.yml
docs/destinations/: BigQuery.md  README.md
hydrogen/: __init__.py  app.py  yeeter.py
hydrogen/destinations/: __init__.py  base_destination.py  bigquery.py  csv.py  postgres.py
hydrogen/utils/: __init__.py  config_loader.py  logging.py
